# ros2_pmld

./: .gitignore  README.md
scripts/: connect_tello.sh  init.sh  kill_gazebo.sh  setup.sh  x.sh
src/follower/: package.xml  setup.py
src/follower/config/: custom_turtlebot.yaml
src/follower/models/custom_turtlebot/: model.sdf
src/follower/urdf/: custom_turtlebot.urdf  custom_turtlebot.urdf.xacro
src/gesture_control/: INTEGRATION_GUIDE.md  README.md  package.xml  setup.py
src/gesture_control/config/: gesture_mapping.yaml
src/gesture_control/gesture_control/: gesture_controller.py  gesture_recognition.py  keypoint_classifier.py  point_history_classifier.py
src/gesture_control/launch/: debug_gazebo_launch.py  gesture_control_launch.py
src/tello_activation/: QUICKSTART.txt  README.md  package.xml  setup.cfg  setup.py
src/tello_activation/launch/: real_drone.launch.py  real_only.launch.py  sim_drone.launch.py  sim_only.launch.py
src/tello_control_gui/: package.xml  setup.cfg  setup.py
src/tello_control_gui/launch/: tello_gui_launch.py
src/tello_control_gui/tello_control_gui/: tello_control_gui.py
src/tello_keyboard/: README.md  package.xml  setup.cfg  setup.py
src/tello_keyboard/launch/: keyboard_launch.py  sim_keyboard_launch.py
src/tello_keyboard/tello_keyboard/: keyboard_controller.py
src/tello_ros/: CITATION.cff
src/tello_ros/tello_description/: CMakeLists.txt
src/tello_ros/tello_driver/src/: tello_joy_node.cpp
src/tello_ros/tello_gazebo/: README.md
src/tello_ros/tello_gazebo/src/: inject_entity.py
(+1 files in other folders)
