<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tello_activation</name>
  <version>0.0.0</version>
  <description>Central launcher package for Tello drone activation (real and simulation)</description>
  <maintainer email="luthfisalis09@gmail.com">shluf</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>tello_driver</depend>
  <depend>tello_msgs</depend>
  <depend>tello_keyboard</depend>
  <depend>tello_gazebo</depend>
  <depend>tello_description</depend>
  <depend>robot_state_publisher</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
